--- a/Vue.js_note/01.md
+++ b/Vue.js_note/01.md
@@ -2,6 +2,8 @@
 
 * 使用 CDN 方法 : 
   
+  `<script src=""></script>`
+  
   Staticfile CDN（国内） : https://cdn.staticfile.org/vue/2.2.2/vue.min.js
 
   unpkg：https://unpkg.com/vue/dist/vue.js, 会保持和 npm 发布的最新的版本一致。
