--- a/Vue.js_note/01.md
+++ b/Vue.js_note/01.md
@@ -9,3 +9,41 @@
   unpkg：https://unpkg.com/vue/dist/vue.js, 会保持和 npm 发布的最新的版本一致。
 
   cdnjs : https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.8/vue.min.js
+
+# 結構
+
+```
+<body>
+<div id="app">
+  <p>原始字符串: {{ message }}</p>
+  <p>计算后反转字符串: {{ reversedMessage }}</p>
+  <p>使用方法后反转字符串: {{ reversedMessage2() }}</p>
+</div>
+
+<script>
+var vm = new Vue({
+  el: '#app',
+  data: {
+    message: 'Runoob!'
+  },
+  computed: {
+    // 计算属性的 getter
+    reversedMessage: function () {
+      // `this` 指向 vm 实例
+      return this.message.split('').reverse().join('')
+    }
+  },
+  methods: {
+    reversedMessage2: function () {
+      return this.message.split('').reverse().join('')
+    }
+  }
+})
+</script>
+</body>
+```
+* 每個 Vue 物件都有一個 id，與上方 <div> 相同
+
+* data : 定義屬性
+
+* methods : 函數
