--- a/Vue.js_note/01.md
+++ b/Vue.js_note/01.md
@@ -47,3 +47,62 @@ var vm = new Vue({
 * data : 定義屬性
 
 * methods : 函數
+
+# 條件句
+
+
+``` html
+<body>
+<div id="app">
+    <div v-if="type === 'A'">
+      A
+	</div>
+	<div v-else-if="type === 'B'">
+	  B
+	</div>
+	<div v-else-if="type === 'C'">
+	  C
+	</div>
+	<div v-else>
+	  Not A/B/C
+	</div>
+</div>
+	
+<script>
+new Vue({
+  el: '#app',
+  data: {
+    type: 'C'
+  }
+})
+</script>
+</body>
+```
+
+# 迴圈
+
+```html
+<body>
+<div id="app">
+  <ol>
+    <li v-for="site in sites">
+      {{ site.name }}
+    </li>
+  </ol>
+</div>
+
+<script>
+new Vue({
+  el: '#app',
+  data: {
+    sites: [
+      { name: 'Runoob' },
+      { name: 'Google' },
+      { name: 'Taobao' }
+    ]
+  }
+})
+</script>
+</body>
+```
+* v-for = "site in sites"
