--- a/Vue.js_note/02.md
+++ b/Vue.js_note/02.md
@@ -6,10 +6,10 @@
 
 # 雜記
 
-* splice() : 
+* splice( ) : 
 
   `arr.splice(2,1,"William")`
   
-  刪除 arr[2] 的元素，刪除一個，改成 "William"
+  刪除 arr[2] 的元素，刪除一個，添加 "William"
   
 * test
