--- a/Vue.js_note/02.md
+++ b/Vue.js_note/02.md
@@ -12,4 +12,12 @@
   
   刪除 arr[2] 的元素，刪除一個，添加 "William"
   
-* test
+* unshift( ) :  
+  
+  ``` 
+  const array1 = [1, 2, 3];
+
+  console.log(array1.unshift(4, 5));
+  // expected output: 5
+  ```
+  添加一個或多個元素至陣列的開頭，並且回傳陣列的新長度
